<?xml version="1.0"?>
<package format="2">
  <name>kobuki_launch_pkg</name>
  <version>0.0.1</version>
  <description>Launch package for Kobuki node with topics remapping</description>

  <maintainer email="alvinisac3399@gmail.com">Alvin Isac</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>kobuki_node</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

